--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+DeadLinkChecker-darwin-x64/*
+
 # Created by https://www.toptal.com/developers/gitignore/api/vim,windows,node,macos,git
 # Edit at https://www.toptal.com/developers/gitignore?templates=vim,windows,node,macos,git
 
