--- a/package.json
+++ b/package.json
@@ -2,20 +2,21 @@
   "name": "dead-link-checker",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "dependencies": {
     "bootstrap": "^4.5.3",
-    "electron": "^11.0.3",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1"
   },
   "devDependencies": {
+    "electron": "^11.1.0",
+    "electron-builder": "^22.9.1",
     "electron-packager": "^15.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron ./src",
-    "build-macS": "electron-packager ./src FirstApp --platform=darwin --arch=x64 --overwrite"
+    "build-mac": "electron-packager ./src DeadLinkChecker --platform=darwin --arch=x64 --overwrite --dir ./dist"
   },
   "author": "",
   "license": "ISC"
