--- a/package.json
+++ b/package.json
@@ -4,19 +4,17 @@
   "description": "",
   "main": "main.js",
   "dependencies": {
-    "bootstrap": "^4.5.3",
-    "jquery": "^3.5.1",
-    "popper.js": "^1.16.1"
+    "electron": "^11.1.0"
   },
   "devDependencies": {
-    "electron": "^11.1.0",
     "electron-builder": "^22.9.1",
-    "electron-packager": "^15.1.0"
+    "electron-packager": "^15.1.0",
+    "jquery": "^3.5.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron ./src",
-    "build-mac": "electron-packager ./src DeadLinkChecker --platform=darwin --arch=x64 --overwrite --dir ./dist"
+    "build-mac": "electron-packager ./src DeadLinkChecker --platform=darwin --arch=x64 --overwrite"
   },
   "author": "",
   "license": "ISC"
